--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,7 @@
 	<classpathentry kind="lib" path="SelLibs/guava-25.0-jre.jar"/>
 	<classpathentry kind="lib" path="SelLibs/okhttp-3.11.0.jar"/>
 	<classpathentry kind="lib" path="SelLibs/okio-1.14.0.jar"/>
-	<classpathentry kind="src" path="/DilipSelenium"/>
 	<classpathentry kind="lib" path="/PageObjectPageFactory/lib/commons-io-2.6.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
